# Exploring-the-Stack-of-GPU-Parallelism

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml
backends/cuda_nccl/: CMakeLists.txt  pyproject.toml
backends/custom_nccl/: pyproject.toml
backends/torch_dist/: pyproject.toml
backends/torch_dtensors/: pyproject.toml
backends/triton_comm/: pyproject.toml
mock_devices/: README.md
parallelism/: __init__.py
parallelism/config/: nanogpt_shakespeare_char.py  utils.py
parallelism/data/nanogpt/: prepare.py
parallelism/ddp/: __init__.py
parallelism/model/: nanoGPT_gpt2.py
parallelism/parallelism_type/ep/: __init__.py
parallelism/parallelism_type/single_gpu/: train.py
parallelism/parallelism_type/sp/: __init__.py
parallelism/single_gpu/: __init__.py
parallelism/tp/: __init__.py
src/mock_devices/: __init__.py
src/parallelism/: __init__.py
src/parallelism/cp/: __init__.py
src/parallelism/pp/: __init__.py
