[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.uv.build-backend]
module-name = ["parallelism", "mock_devices"]
module-root = ""

[tool.uv.workspace]
members = ["backends/*"]

[project]
name = "parallelism"
version = "0.1.0"
description = "Parallelism from first principles (PFFP)."
readme = "README.md"
authors = [
    { name = "Vipul Sharma", email = "vipuls181999@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "torchtitan",
    "pytorch-triton",
    "numpy",
    "ruff",
    "pydocstyle",
    "cuda_nccl",
    "custom_nccl",
    "torch_dist",
    "torch_dtensors",
    "triton_comm",
    "wandb",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "assertpy",
    "hypothesis",
    ]
cpu = [
    "torch>=2.9.0.dev",  # nightly
    "torchvision>=0.24.0.dev",  # nightly
    "torchaudio>=2.8.0.dev",  # nightly
    "torchao>=0.13.0.dev",  # nightly
]
cu128 = [
    "torch>=2.9.0.dev",  # nightly
    "torchvision>=0.24.0.dev",  # nightly
    "torchaudio>=2.8.0.dev",  # nightly
    "torchao>=0.13.0.dev",  # nightly
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu128" },
    ],
]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-nightly-cpu", extra = "cpu" },
  { index = "pytorch-nightly-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-nightly-cpu", extra = "cpu" },
  { index = "pytorch-nightly-cu128", extra = "cu128" },
]
torchaudio = [
  { index = "pytorch-nightly-cpu", extra = "cpu" },
  { index = "pytorch-nightly-cu128", extra = "cu128" },
]
torchao = [
  { index = "pytorch-nightly-cpu", extra = "cpu" },
  { index = "pytorch-nightly-cu128", extra = "cu128" },
]
pytorch-triton = [
  { index = "pytorch-nightly" },
]
cuda_nccl = { workspace = true }
custom_nccl = { workspace = true }
torch_dist = { workspace = true }
torch_dtensors = { workspace = true }
triton_comm = { workspace = true }

[[tool.uv.index]]
name = "pytorch-nightly-cpu"
url = "https://download.pytorch.org/whl/nightly/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-nightly-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly"
explicit = true

# non-uv tools' settings
[tool.ruff]
line-length = 90
select = ["E", "F", "I"]

[tool.ruff.lint]
extend-select = ["B", "D", "I"]
# using bugbear, pydocstyle, and isort

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
